# VULNGUARD

./: .gitignore  .vuln-scan.json.example  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  encrypted_results.json  pyproject.toml  requirements.txt
.agents/skills/decrypt-report/: SKILL.md
.github/workflows/: security.yml
action/: action.yml
angular/: report-decryption.component.css  report-decryption.component.html  report-decryption.component.ts  report-decryption.service.ts
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  test_results.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: FileUpload.tsx  FilterBar.tsx  FindingList.tsx  MetricsDashboard.tsx  ReportDecryptor.tsx  SummaryCards.tsx  UrlScanner.tsx
dashboard/src/utils/: sarif.ts
scanner/: __init__.py  ai_analyzer.py  api.py  cli.py  core.py  findings.py  repo_scanner.py  vuln_intel.py  web_scanner.py
scanner/encryption/: __init__.py  keygen.py  report_encryption.py
scanner/parsers/: __init__.py  go.py  java.py  javascript.py  python.py
scanner/rules/: __init__.py  auth.py  sqli.py  xss.py
tests/: test_api_decrypt.py  test_encryption.py  test_scanner.py
tests/fixtures/: sample-output.json  vulnerable_api.py  vulnerable_components.jsx  vulnerable_crypto.py
